Bug 75509 - Incorrect display of digits in default Numeric formatting of a field when language isn't English
Summary: Incorrect display of digits in default Numeric formatting of a field when lan...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: Database-Tables
  Show dependency treegraph
 
Reported: 2014-02-25 20:43 UTC by Pleinlouie
Modified: 2025-11-09 09:33 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen (54.75 KB, image/png)
2014-02-25 20:43 UTC, Pleinlouie
Details
odb coop (25.51 KB, application/vnd.oasis.opendocument.database)
2014-02-26 23:24 UTC, Pleinlouie
Details
Default of Decimal-field without decimal places in tables except when formatted in English (3.02 KB, application/vnd.sun.xml.base)
2014-03-21 19:44 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pleinlouie 2014-02-25 20:43:17 UTC
Created attachment 94728 [details]
Screen

Bonjour a tous je sais pas si je poste au bon endroit merci d’avance pour votre aide
j’ai crée un champs monétaire 1324,00$ canadien en lui attribuant par default 68,99$ mais dans ma table il inscrit 68,00$
j essaye de trouver la solution par moi même mais j ai du mal
j’ai type de champs NUMERIC,
 monnaie,
 saisie requise, non
, 2 décimales 
1, 0 non significatif
et dans valeurs par default j ai 68,99$
Il s’agit d’un bogue. Je ne sais s’il a été notifié chez LibreOffice…
Comment 1 Julien Nabet 2014-02-26 20:53:54 UTC
pleinlouie: please describe your bug in English + attach your odb file so we can give it a try.
Comment 2 Pleinlouie 2014-02-26 23:24:06 UTC
Created attachment 94793 [details]
odb coop
Comment 3 Pleinlouie 2014-02-26 23:24:38 UTC
Hi everybody sorry for my english but i try to do my best Lol i'm on a project to do a obd for my worker cooperative we are a little textil worker acrtionner coopérative so 
I created a Canadian monetary fields by assigning default $ 68.99 but in my table it registered $ 68.00 
I try to find the solution by myself but I have trouble 
I type NUMERIC fields 
currency 
Entry required not 
, 2 decimals 
1, no significant 0 
and default values ​​I have $ 68.99 
This is a bug. I do not know if it has been notified in LibreOffice …
I do not know if I post in the right place thank you in advance for your help 
I include the obd this time
Comment 4 Jean-Baptiste Faure 2014-03-08 14:48:01 UTC
Set status back to UNCONFIRMED because this bug report has not been independently confirmed.

Thank you for your understanding.
Best regards. JBF
Comment 5 sophie 2014-03-11 17:51:48 UTC
Hi, confirmed with the database provided and version Version: 4.2.2.1
Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f - Set to new, change summary - Sophie
Comment 6 Robert Großkopf 2014-03-21 19:44:23 UTC
Created attachment 96184 [details]
Default of Decimal-field without decimal places in tables except when formatted in English

Open the tables. In the first table you see a field formatted with German language to default 6,32 - shows 6,00. Same table, now formatted with English language to default 6.32 - shows 6.32.

Seems the default of the GUI works only right with a point, not with a comma.
Comment 7 Robert Großkopf 2014-03-21 19:49:25 UTC
This bug appears also in the first version of LO. I got the same result with LO 3.3.0 beta1. So I set the version to "Inherited From OOo". 
Also will change the title to show the bug doesn't appear in English language.
Comment 8 Alex Thurgood 2015-01-03 17:41:28 UTC Comment hidden (no-value)
Comment 9 QA Administrators 2016-01-17 20:05:39 UTC Comment hidden (obsolete)
Comment 10 Alex Thurgood 2016-01-19 13:17:42 UTC
Still present in 

Version: 5.0.3.2
Build ID: e5f16313668ac592c1bfb310f4390624e3dbfb75
Locale : fr-FR (fr.UTF-8)

with test file
Comment 11 QA Administrators 2017-03-06 14:46:04 UTC Comment hidden (obsolete)
Comment 12 Anton Abrosimov 2018-10-21 00:40:22 UTC
I can confirm this bug in LO V6.1.2, V6.1.3 with Russian langpack.

You can use my Docker container for making tests and more details: https://gitlab.com/abrosimov_bug_reports/libreoffice_bug_number
Comment 13 QA Administrators 2021-08-28 03:53:23 UTC Comment hidden (obsolete)
Comment 14 Robert Großkopf 2021-08-28 06:27:16 UTC
Bug is still present in LO 7.2.0.4 on OpenSUSE 15.2 64bit rpm Linux.
Comment 15 QA Administrators 2023-08-29 03:18:23 UTC Comment hidden (obsolete)
Comment 16 Robert Großkopf 2023-08-29 05:32:05 UTC
Bug still exists on 
Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 17 QA Administrators 2023-08-30 03:06:03 UTC Comment hidden (obsolete)
Comment 18 QA Administrators 2025-08-30 03:12:40 UTC Comment hidden (obsolete)
Comment 19 Commit Notification 2025-10-20 18:47:04 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40ce74d57c7661a6bb556135c1304a87d92f0178

tdf#75509 tdf#138409 Convert default value to double without formatter

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2025-10-30 10:33:10 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7b3ea692f293346fbbdf2a391d9d971c34fa1f2

tdf#75509 Add a UITest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2025-10-30 11:57:28 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/77f893a63fdf9b444c28447da73c2e1a661b8396

tdf#75509 tdf#138409 Convert default value to double without formatter

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.